tests/ui/traits/const-traits/super-traits-fail.stderr
error[E0277]: the trait bound `Bar::{synthetic#0}: TyCompat<Foo::{synthetic#0}>` is not satisfied
  --> $DIR/super-traits-fail.rs:19:12
   |
LL | impl const Bar for S {}
   |            ^^^ the trait `TyCompat<Foo::{synthetic#0}>` is not implemented for `Bar::{synthetic#0}`, which is required by `S: Bar`
   |
   = help: the trait `Bar` is implemented for `S`
note: required for `S` to implement `Bar`
  --> $DIR/super-traits-fail.rs:12:7
   |
LL | trait Bar: ~const Foo {}
   |       ^^^

error[E0277]: the trait bound `Maybe: TyCompat<Foo::{synthetic#0}>` is not satisfied
   |
note: required by a bound in `Bar::{synthetic#0}`
  --> $DIR/super-traits-fail.rs:12:12
   |
LL | trait Bar: ~const Foo {}
   |            ^^^^^^^^^^ required by this bound in `Bar::{synthetic#0}`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
